--- a/frontApp/src/app/admin/search/search.component.html
+++ b/frontApp/src/app/admin/search/search.component.html
@@ -1,31 +1,27 @@
-                      <div class="card-body">
+<nav class = "navbar navbar-default">
+    <div class = "container">
+      <div class = 'navbar-header'>
                           <form  [formGroup]="searchForm" (ngSubmit)="onSubmitFlightNumber()" class="form">
                               <div class="form-group">
-                                  <label for="uname1">FlightNumber</label>
-                                  <input type="text" class="form-control form-control-lg rounded-0" formControlName = "flightNumber">
+                                  <input type="text" class="form-control form-control-lg rounded-0" formControlName = "flightNumber" placeholder="Flight Number">
                               </div>
                               <div class="form-group">
-                                  <label>Date</label>
-                                  <input type="text" class="form-control form-control-lg rounded-0" formControlName="date">
+                                  <input type="text" class="form-control form-control-lg rounded-0" formControlName="date" placeholder = "date">
                               </div>
+                              <!-- <ng-datepicker [(ngModel)]="date"></ng-datepicker> -->
 
                               <button type="submit" class="btn btn-success btn-lg float-left" id="btnLogin">Search</button>
                           </form>
                       </div>
                       <!--/card-block-->
                   
-
-
-
                     <div class="card-body">
                         <form  [formGroup]="searchFormTwo" (ngSubmit)="onSubmitAddress()" class="form">
                             <div class="form-group">
-                                <label for="uname1">Origin or Destination Address</label>
-                                <input type="text" class="form-control form-control-lg rounded-0" formControlName = "address">
+                                <input type="text" class="form-control form-control-lg rounded-0" formControlName = "address" placeholder = "Origin Or Destination">
                             </div>
                             <div class="form-group">
-                                <label>Date</label>
-                                <input type="password" class="form-control form-control-lg rounded-0" formControlName="date" autocomplete="new-password">
+                                <input type="text" class="form-control form-control-lg rounded-0" formControlName="newDate" placeholder = "date">
                             </div>
 
                             <button type="submit" class="btn btn-success btn-lg float-left" id="btnLogin">Search</button>
