--- a/frontApp/src/app/app.component.html
+++ b/frontApp/src/app/app.component.html
@@ -1,5 +1,10 @@
-<app-search></app-search>
-
-<app-result></app-result>
-
-<app-footer></app-footer>
+<div class = "container-fluid">
+        <app-header></app-header>
+        <app-search></app-search>
+   
+        <br>
+        <hr>
+        <app-result></app-result>
+        
+        <app-footer></app-footer>
+</div>
