--- a/frontApp/src/app/admin/result/result.component.html
+++ b/frontApp/src/app/admin/result/result.component.html
@@ -1,4 +1,4 @@
-
+<div class = "container-fluid">
 <table class="table table-hover" *ngIf = "display">
   <thead>
     <tr>
@@ -31,3 +31,4 @@
    
   </tbody>
 </table>
+</div>
