--- a/frontApp/src/app/static/footer/footer.component.html
+++ b/frontApp/src/app/static/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="footer bg-light">
+<footer class="footer bg-light container-fluid">
   <div class="container" id = 'father'>
     <div class="row">
         <ul class="list-inline mb-2">
