minor angular bug fixed

--- a/frontApp/src/app/admin/result/result.component.html
+++ b/frontApp/src/app/admin/result/result.component.html
@@ -25,7 +25,7 @@
       <td>{{result.arrival | date}}</td>
       <td>{{result.aircraft}}</td>
       <td>{{result.distance}}</td>
-      <td>{{result.travelTime | date}}</td>
+      <td>{{result.travelTime}}</td>
       <td>{{result.status}}</td>
     </tr>
    
