angular validation completed

--- a/frontApp/src/app/admin/result/result.component.html
+++ b/frontApp/src/app/admin/result/result.component.html
@@ -1,5 +1,5 @@
-<div class = "container-fluid">
-<table class="table table-hover" *ngIf = "display">
+<div class = "container-fluid" *ngIf = "display == true">
+<table class="table table-hover">
   <thead>
     <tr>
       <th scope="col">flightNumber</th>
