--- a/frontApp/src/app/admin/search/search.component.html
+++ b/frontApp/src/app/admin/search/search.component.html
@@ -1,55 +1,38 @@
 <div class = "container">    
     <form  [formGroup]="searchForm" (ngSubmit)="onSubmitFlightNumber()" class="form">
-        <div class="form-row align-items-center">
+        <div class="form-row align-items-top">
            
             <div class="col-sm-3 my-1">
                 <input type="text" class="form-control form-control-lg rounded-0" formControlName = "flightNumber" placeholder="Flight Number">
-
-             <div *ngIf="searchForm.controls['flightNumber'].errors && searchForm.controls['flightNumber'].pristine" class="error-msg">
-                <div [hidden]="!searchForm.controls['flightNumber'].errors.required">Flight Number is required.</div>
-                <div [hidden]="!searchForm.controls['flightNumber'].errors.invalid">Flight Number is invalid, min 4 digit required </div>
-              </div>
-
+                <div *ngIf = "!searchForm.get('flightNumber').valid" class = "error">4 digit Flight Number is required.</div>
             </div>
 
              <div class="col-sm-3 my-1">
                 <input type="date" class="form-control form-control-lg rounded-0" formControlName="date" placeholder = "date">
-
-
-            <div *ngIf="searchForm.controls['date'].errors && searchForm.controls['date'].pristine" class="error-msg">
-                <div [hidden]="!searchForm.controls['date'].errors.required">Date is required.</div>
-                <div [hidden]="!searchForm.controls['date'].errors.invalid">Date is invalid.</div>
-              </div>
-
+                <div *ngIf = "!searchForm.get('date').valid" class = "error">Date field is required</div>
             </div>
-
-
 
             <div class="col-sm-3 my-1">
                 <button type="submit" class="btn btn-success btn-lg float-left" id="btnLogin" [disabled]="!searchForm.valid">Search</button>
             </div>
-        </div>
-        <div class="form-row align-items-center">
-                <div class="invalid-feedback" *ngIf="!searchForm.get('date').valid && searchForm.get('flightNumber').touched">Oops, you missed this one.</div>
         </div>
     </form>
 </div>    
 
 <div class = "container">    
     <form  [formGroup]="searchFormTwo" (ngSubmit)="onSubmitAddress()" class="form">
-        <div class="form-row align-items-center">
+        <div class="form-row align-items-top">
             <div class="col-sm-3 my-1">
                 <input type="text" class="form-control form-control-lg rounded-0" formControlName = "address" placeholder = "Origin Or Destination">
+                <div *ngIf = "!searchFormTwo.get('address').valid" class = "error">3 Character code in Capital required</div>
             </div>    
             <div class="col-sm-3 my-1">
                 <input type="date" class="form-control form-control-lg rounded-0" formControlName="newDate" placeholder = "date">
+                <div *ngIf = "!searchFormTwo.get('newDate').valid" class = "error">Date field is required</div>
             </div>
             <div class="col-sm-3 my-1">
                 <button type="submit" class="btn btn-success btn-lg float-left" id="btnLogin" [disabled]="!searchFormTwo.valid">Search</button>
             </div>    
-            <div class="form-row align-items-center">
-                    <div class="invalid-feedback" *ngIf="!searchFormTwo.get('address').touched && searchFormTwo.get('newDate').touched">Oops, you missed this one.</div>
-            </div>
         </div>    
     </form>
 </div>
