--- a/frontApp/src/app/app.component.html
+++ b/frontApp/src/app/app.component.html
@@ -4,7 +4,8 @@
    
         <br>
         <hr>
+        <router-outlet></router-outlet>
         <app-result></app-result>
-        
+
         <app-footer></app-footer>
 </div>
